<resources>
    <string name="app_name">IntentServiceExample</string>
    <string name="button_load">Load</string>
    <string name="setting_category_shedule">Notifications</string>
    <string name="summary_pref_alarm_set">Set if alarm manager is active</string>
    <string name="title_pref_alarm_set">Set Alarm</string>
    <string name="title_pref_name_set">Name</string>
    <string name="summary_pref_name_set">Your name</string>
    <string name="title_pref_time_set">Time</string>
    <string name="summary_pref_time_set">Time when alarm start</string>
    <string name="key_pref_alarm_set">prefAlarmSet</string>
    <string name="key_pref_name_set">prefNameSet</string>
    <string name="key_pref_time_set">prefTimeSet</string>

    <string name="title_fragment_contacts">Contacts</string>
    <string name="tvLabFeedName">Name</string>
    <string name="tvLabFeedEmail">Email</string>
    <string name="tvLabFeedMessage">Massage</string>
    <string name="tvTitleProfile">profile</string>
    <string name="tvAboutProfile">about</string>
    <string name="fragment_first_button">First</string>
    <string name="fragment_second_button">Second</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
